--- a/Lab1/First assignment/Source/Enrollment.html
+++ b/Lab1/First assignment/Source/Enrollment.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en" ng-app="App" ng-controller="Ctrl">
+<html lang="en" ng-app="courseRegApp" ng-controller="courseRegCtrl">
 
 <head>
     <meta charset="UTF-8">
@@ -67,9 +67,9 @@
                 <tbody>
                 <tr>
                     <td>Mon Wed </td>
-                    <td>3:30 PM</td>
-                    <td>8:45 PM</td>
-                    <td>Room 00206</td>
+                    <td>5:30 PM</td>
+                    <td>6:45 PM</td>
+                    <td>Royall Hall-Rm 00206</td>
                     <td> Brain Hare</td>
                     <th>01/21/2020 - 5/15/2020</th>
                 </tr>
