--- a/Lab1/First assignment/Source/Login.html
+++ b/Lab1/First assignment/Source/Login.html
@@ -99,7 +99,7 @@
             return false;
         }
 
-        window.location.href = "CourseRegistration.html";
+        window.location.href = "Registration.html";
     }
 
 </script>
